[package]
name = "blinkt"
version = "0.5.0" # Also update html_root_url in lib.rs
authors = ["Rene van der Meer <rene@golemparts.com>"]
description = "Interface for the Pimoroni Blinkt!, and any similar APA102 or SK9822 LED strips or boards, on a Raspberry Pi."
documentation = "https://docs.golemparts.com/blinkt"
repository = "https://github.com/golemparts/blinkt"
readme = "README.md"
license = "MIT"
categories = ["embedded", "hardware-support"]
keywords = ["apa102","sk9822","blinkt","raspberry","pi"]

[dependencies]
quick-error = "1.1"
rppal = "0.8"

[dev-dependencies]
rand = "0.5"
