[package]
name = "blinkt"
version = "0.7.1"                                                                                                             # Also update html_root_url in lib.rs
edition = "2021"
rust-version = "1.56.0"
authors = ["Rene van der Meer <rene@golemparts.com>"]
description = "Interface for the Pimoroni Blinkt!, and any similar APA102 or SK9822 LED strips or boards, on a Raspberry Pi."
documentation = "https://docs.golemparts.com/blinkt"
repository = "https://github.com/golemparts/blinkt"
readme = "README.md"
license = "MIT"
categories = ["embedded", "hardware-support"]
keywords = ["apa102", "sk9822", "blinkt", "raspberry", "pi"]

[dependencies]
rppal = "0.15.0"

[dev-dependencies]
rand = "0.8.4"
simple-signal = "1.1.1"
